moudul for the equipment

--- a/angular-client/src/index.html
+++ b/angular-client/src/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
   <meta charset="utf-8">
-  <title>AngularClient</title>
+  <title>MangmentSystem</title>
   <base href="/">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
